--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'me.dkim19375'
-version = '1.1.0'
+version = '1.1.1'
 
 final basePackage = 'me.dkim19375.esskitspreview.libs'
 
@@ -18,17 +18,18 @@ shadowJar {
 
 repositories {
     addRepositories project
+    mavenCentral()
 }
 
 dependencies {
     compileOnly 'net.kyori:adventure-api:4.8.1'
-    compileOnly 'org.jetbrains:annotations:20.1.0'
+    compileOnly 'org.jetbrains:annotations:22.0.0'
     compileOnly 'net.essentialsx:EssentialsX:2.19.0-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
     compileOnly 'net.kyori:adventure-text-serializer-legacy:4.8.1'
 
     implementation 'dev.triumphteam:triumph-gui:3.0.3'
-    implementation 'io.github.dkim19375:dkim-bukkit-core:3.1.4'
+    implementation 'io.github.dkim19375:dkim-bukkit-core:3.2.6'
 }
 
 //noinspection GroovyAssignabilityCheck
