--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,12 @@ repositories {
 dependencies {
     compileOnly 'net.kyori:adventure-api:4.9.3'
     compileOnly 'org.jetbrains:annotations:23.0.0'
-    compileOnly 'net.essentialsx:EssentialsX:2.19.0-SNAPSHOT'
+    compileOnly 'net.essentialsx:EssentialsX:2.19.2'
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
     compileOnly 'net.kyori:adventure-text-serializer-legacy:4.9.3'
 
-    implementation 'dev.triumphteam:triumph-gui:3.0.3'
-    implementation 'io.github.dkim19375:dkim-bukkit-core:3.3.21'
+    implementation 'dev.triumphteam:triumph-gui:3.0.5'
+    implementation 'io.github.dkim19375:dkim-bukkit-core:3.3.31'
 }
 
 //noinspection GroovyAssignabilityCheck
