--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+import java.nio.file.Files
+import java.nio.file.StandardCopyOption
+
 plugins {
     id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'org.jetbrains.kotlin.jvm' version '1.6.10'
@@ -5,7 +8,7 @@ plugins {
 }
 
 group = 'me.dkim19375'
-version = '1.1.1'
+version = '1.1.2'
 
 final basePackage = 'me.dkim19375.esskitspreview.libs'
 
@@ -25,7 +28,7 @@ dependencies {
     compileOnly 'net.kyori:adventure-api:4.9.3'
     compileOnly 'org.jetbrains:annotations:23.0.0'
     compileOnly 'net.essentialsx:EssentialsX:2.19.2'
-    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
     compileOnly 'net.kyori:adventure-text-serializer-legacy:4.9.3'
 
     implementation 'dev.triumphteam:triumph-gui:3.0.5'
@@ -80,32 +83,36 @@ task removeBuildJars() {
     new File('build/libs').deleteDir()
 }
 
-final server = '1.17'
+final server = '1.18'
+final servers = [
+        "1.8",
+        "1.16",
+        "1.17",
+        "1.18"
+]
 
-task copyFile(type: Copy) {
-    if (!new File("../.TestServers/${server}/plugins/").exists()) {
-        return
+task copyFile() {
+    doLast {
+        final jar = shadowJar.archiveFile.get().asFile
+        final File pluginFolder = new File(file(rootDir).path, "../.TestServers/${server}/plugins")
+        if (pluginFolder.exists()) {
+            final File file = new File(pluginFolder, shadowJar.archiveFileName.get())
+            if (file.exists()) {
+                file.delete()
+            }
+            Files.copy(jar.toPath(), file.toPath(), StandardCopyOption.REPLACE_EXISTING)
+        }
     }
-    new File("../.TestServers/${server}/plugins/${project.name}-${project.version}-all.jar").delete()
-    from("build/libs/${project.name}-${project.version}-all.jar")
-    into("../.TestServers/${server}/plugins")
-    include("*.jar")
 }
 
 task deleteAll() {
-    for (File file : new File('../.TestServers/1.17/plugins').listFiles()) {
-        if (file.name.startsWith(project.name)) {
-            file.delete()
-        }
-    }
-    for (File file : new File('../.TestServers/1.16/plugins').listFiles()) {
-        if (file.name.startsWith(project.name)) {
-            file.delete()
-        }
-    }
-    for (File file : new File('../.TestServers/1.8/plugins').listFiles()) {
-        if (file.name.startsWith(project.name)) {
-            file.delete()
+    doLast {
+        for (deleteServer in servers) {
+            for (file in new File("../.TestServers/${deleteServer}/plugins").listFiles()) {
+                if (file.name.startsWith(shadowJar.archiveBaseName.get())) {
+                    file.delete()
+                }
+            }
         }
     }
 }
